<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wavefront</groupId>
    <artifactId>slug-generator</artifactId>
    <version>1.0-RC1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>RISON Slug Generator</name>
    <description>A library to generate RISON slugs for Wavefront charts</description>
    <url>http://www.wavefront.com</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Yutian Wu</name>
            <email>wyutian@vmware.com</email>
            <organization>Wavefront</organization>
            <organizationUrl>http://www.wavefront.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:wavefrontHQ/slugRisonGenerator.git</connection>
        <developerConnection>scm:git:git@github.com:wavefrontHQ/slugRisonGenerator.git</developerConnection>
        <url>git@github.com:wavefrontHQ/slugRisonGenerator.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>sunnylabs-releases</id>
            <name>Release Repository</name>
            <url>https://repo.wavefront.com/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>sunnylabs-snapshots</id>
            <name>Snapshot Repository</name>
            <url>https://repo.wavefront.com/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <nexus.upload.phase>none</nexus.upload.phase>

        <!-- jdk 11 can be used for building -->
        <jdk.version>11</jdk.version>
        <javadoc.sdk.version>8</javadoc.sdk.version>

        <!-- Force encoding to UTF-8 (bug in OS X) -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <lombok.version>1.18.2</lombok.version>
        <guava.version>29.0-jre</guava.version>
        <joda.time.version>2.10.1</joda.time.version>
        <jackson.version>2.10.3</jackson.version>
        <jackson.databind.version>2.10.3</jackson.databind.version>
        <jackson.rison.version>2.9.10.2</jackson.rison.version>

        <!-- test dependencies -->
        <junit.bom.version>5.7.0</junit.bom.version>
        <assertj.core.version>3.18.0</assertj.core.version>

        <!-- maven plugins -->
        <checkstyle.version>8.37</checkstyle.version>
        <maven.plugin.compiler.version>3.8.1</maven.plugin.compiler.version>
        <maven.plugin.enforcer.version>3.0.0-M3</maven.plugin.enforcer.version>
        <maven.plugin.checkstyle.version>3.1.1</maven.plugin.checkstyle.version>
        <maven.plugin.surefire.version>3.0.0-M5</maven.plugin.surefire.version>
        <maven.plugin.jacoco.version>0.8.6</maven.plugin.jacoco.version>
        <maven.plugin.release.version>3.0.0-M1</maven.plugin.release.version>
        <maven.plugin.deploy.version>3.0.0-M1</maven.plugin.deploy.version>
        <javadoc.sdk.version>11</javadoc.sdk.version>
        <maven.plugin.javadoc.version>3.2.0</maven.plugin.javadoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda.time.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.databind.version}</version>
        </dependency>
        <dependency>
            <groupId>com.bazaarvoice.jackson</groupId>
            <artifactId>rison</artifactId>
            <version>${jackson.rison.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--test dependency-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.core.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.compiler.version}</version>
                <configuration>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <release>${jdk.version}</release>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.unsupported</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.plugin.enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <DependencyConvergence />
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.plugin.checkstyle.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>${project.basedir}/checkstyle.xml</configLocation>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.plugin.surefire.version}</version>
                <configuration>
                    <forkCount>1.0C</forkCount>
                    <reuseForks>true</reuseForks>
                    <rerunFailingTestsCount>3</rerunFailingTestsCount>
                    <argLine>@{argLine} -Xmx2G --illegal-access=permit</argLine>
                    <systemPropertyVariables>
                        <org.slf4j.simpleLogger.defaultLogLevel>WARN
                        </org.slf4j.simpleLogger.defaultLogLevel>
                        <org.slf4j.simpleLogger.showDateTime>true
                        </org.slf4j.simpleLogger.showDateTime>
                        <java.util.logging.config.file>logging.properties
                        </java.util.logging.config.file>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${maven.plugin.jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>check</id>
                        <phase>test</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>PACKAGE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.50</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                            <includes>
                                <include>com.wavefront.slug.chart</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>coverage-report</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.plugin.javadoc.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <doclint>none</doclint>
                            <release>${javadoc.sdk.version}</release>
                            <source>${javadoc.sdk.version}</source>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.plugin.release.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                    <goals>deploy</goals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.plugin.deploy.version}</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>nexus-upload</id>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                        <phase>${nexus.upload.phase}</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>nexus</id>
            <properties>
                <nexus.upload.phase>deploy</nexus.upload.phase>
            </properties>
        </profile>
    </profiles>
</project>
